objects/CreateLoginQueue__c.object
<CustomObject>
    <description>What it Does? Object used ContactAPIMethods class for PS REST API calls. Downstream Impact? Used by ContactAPIMethods class, which is referenced by ServicesReadyContact classes. Which Department is Owner? PS.</description>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What it Does? Holds contact for login queue. Downstream Impact? Used by ContactAPIMethods class, which is referenced by ServicesReadyContact classes. Which Department is Owner? PS.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Create Login Queue</relationshipLabel>
        <relationshipName>Contact_Create_Login_Queue</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Holds whether login queue contact was in error. Downstream Impact? Used by ContactAPIMethods class, which is referenced by ServicesReadyContact classes. Which Department is Owner? PS.</description>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Holds whether login queue contact is processed. Downstream Impact? Used by ContactAPIMethods class, which is referenced by ServicesReadyContact classes. Which Department is Owner? PS.</description>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>What it Does? Holds result of contact login. Downstream Impact? Used by ContactAPIMethods class, which is referenced by ServicesReadyContact classes. Which Department is Owner? PS.</description>
        <label>Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Create Login Queue</label>
    <nameField>
        <displayFormat>CLQ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Create Login Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>